resolve  overflow x

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-   
+    overflow-x: hidden;
 }
 
 a {
@@ -44,32 +45,36 @@ main {
     padding: 1rem;
     flex: 1;
     background-color: #818FB4;
+    width: 100vw;
+    
 }
 
 section {
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; */
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(435px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(450px,1fr));
     gap: 32px;
     padding: 1rem;
     transition: 3s ease-in-out;
+    width: 100%;
 }
 
 article {
     background-color: #F5E8C7;
     display: flex;
     flex-direction: row;
-    border: 2px solid 435585;
+    /* border: 1px solid #435585; */
     margin: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    width: 100%;
+    width: 90%;
     height: 420px;
     /* height: auto; */
     
     transition: all 0.5s ease; 
+
+
+    border-radius: 20px;
+
 }
 
 article:hover {
@@ -262,7 +267,7 @@ footer {
 
         .container-busqueda {
             flex-direction: column;
-            max-width: 100%;
+            max-width: 90%;
             align-items: center;
         }
 
@@ -366,14 +371,14 @@ footer {
     height: auto;
 }
 
-.circulo {
+/* .circulo {
     display: inline-block;
     width: 15px;  
     height: 15px; 
     background-color: #435585;
     border-radius: 50%; 
     margin-right: 5px; 
-}
+} */
 
 .stats {
     display: flex;
